--- a/server/Makefile
+++ b/server/Makefile
@@ -1,2 +1,10 @@
 run:
 	python manage.py runserver
+
+build:
+ifeq ($(OS),Windows_NT)
+	venv\Scripts\activate
+else
+	source venv/bin/activate
+endif
+	pip install -r requirements.txt
