--- a/server/Makefile
+++ b/server/Makefile
@@ -5,6 +5,6 @@ build:
 ifeq ($(OS),Windows_NT)
 	venv\Scripts\activate
 else
-	source venv/Scripts/activate
+	venv/Scripts/activate
 endif
 	pip install -r requirements.txt
