--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gapi": "^0.0.3",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
