--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sgratzl/chartjs-chart-boxplot": "^4.3.0",
+    "@types/faker": "^6.6.9",
     "bootstrap": "^5.3.3",
-    "next": "14.1.3",
+    "chart.js": "^4.4.2",
+    "d3": "^7.9.0",
+    "faker": "^5.5.3",
+    "next": "^14.1.3",
+    "plotly.js": "^2.30.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
