--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@opengovsg/design-system-react": "^1.19.0",
+    "bootstrap": "^5.3.3",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
