--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.3",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^20",
