added sliding bar

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.14",
     "@sgratzl/chartjs-chart-boxplot": "^4.3.0",
     "@types/faker": "^6.6.9",
     "bootstrap": "^5.3.3",
