Edited requirements.txt . Editted the _label_scores_AND_similarity_scores script

--- a/scrapers/requirements.txt
+++ b/scrapers/requirements.txt
@@ -8,3 +8,10 @@ webdriver-manager
 requests-HTML
 supabase
 python-dotenv
+transformers
+rake-nltk
+scikit-learn
+nltk
+torch
+torchvision
+parallel-pandas
