--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 version: '3'
 
 services:
-  backend:
-    build: ./server
-    command: python ./server/manage.py runserver 0.0.0.0:8000
+  api:
+    build: ./api
+    command: python ./api/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/volume
     ports:
       - "8000:8000"
 
-  frontend:
+  website:
     build: ./webapp
     ports:
       - "3000:3000"
