--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,5 +27,5 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        cd server
+        cd api
         python manage.py test
