--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,7 +22,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        cd server
+        cd api
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
